# gsy-decentralized-exchange

./: .env.ewds.local.example  .gitignore  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  copilot-instructions.md  docker-compose.ewds.yml  docker-compose.launchpad-matching-service.yml  docker-compose.test.yml  docker-compose.yml  index.html  metadata.scale  mkdocs.yml  robots.txt  search.html
e2e-tests/: Cargo.toml  Dockerfile
e2e-tests/features/: community_client.feature  preference_matching.feature  trade_execution.feature
e2e-tests/src/: main.rs  world.rs
e2e-tests/src/steps/: common_steps.rs  community_client_steps.rs  market_steps.rs  mod.rs  trade_steps.rs
gsy-community-client/: Cargo.toml  Dockerfile
gsy-community-client/src/: constants.rs  external_api.rs  lib.rs  main.rs  measurements.rs  time_utils.rs  topology.rs  types.rs
gsy-community-client/src/external_measurements/: influxdb_api.rs  manager.rs  mod.rs
gsy-community-client/src/node-connector/: orders.rs
gsy-community-client/src/node_connector/: orders.rs
gsy-community-client/src/offchain_storage_connector/: adapter.rs
gsy-community-client/tests/: api_adapter.rs  evm_integration.rs  influx_api.rs  main.rs  node_orders.rs
gsy-ethers-listener/: Cargo.toml  Dockerfile
gsy-ethers-listener/src/: lib.rs
gsy-ethers-listener/tests/: integration_test.rs
gsy-execution-engine/: Cargo.toml  Dockerfile  metadata.scale
gsy-execution-engine/src/: lib.rs  main.rs
gsy-execution-engine/src/connectors/: evm_connector.rs  mod.rs  offchain_storage.rs  substrate_connector.rs
gsy-execution-engine/src/primitives/: measurements.rs  mod.rs  penalty_calculator.rs  trades.rs
gsy-execution-engine/src/services/: execution_orchestrator.rs  mod.rs
gsy-execution-engine/src/utils/: cli.rs  mod.rs  telemetry.rs
gsy-execution-engine/tests/: evm_integration.rs
gsy-market-orchestrator/: Cargo.toml  Dockerfile  metadata.scale
gsy-market-orchestrator/src/: chain_connector.rs  config.rs  lib.rs  main.rs  orchestrator.rs
gsy-market-orchestrator/tests/: evm_integration.rs
gsy-matching-engine/: Cargo.toml  Dockerfile  Dockerfile.test  README.md  metadata.scale
gsy-matching-engine/src/: lib.rs  main.rs
gsy-matching-engine/src/algorithms/: mod.rs  pay_as_clear.rs
gsy-matching-engine/src/connectors/: evm_connector.rs  mod.rs  redis_connector.rs  substrate_connector.rs
gsy-matching-engine/src/primitives/: mod.rs  node_types_converter.rs  web2.rs  web3.rs  web3_extension.rs
gsy-matching-engine/src/utils/: cli.rs  mod.rs
gsy-matching-engine/tests/: evm_integration.rs
gsy-node/: Cargo.toml  Dockerfile  Dockerfile.test  README.md
gsy-node/docs/: rust-setup.md
gsy-node/modules/gsy-collateral/: Cargo.toml
gsy-node/modules/gsy-collateral/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
gsy-node/modules/offchain-utils/: Cargo.toml  test.rs
gsy-node/modules/offchain-utils/src/: lib.rs  mock.rs  tests.rs  weights.rs
gsy-node/modules/orderbook-registry/: Cargo.toml
gsy-node/modules/orderbook-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
gsy-node/modules/orderbook-worker/: Cargo.toml
gsy-node/modules/orderbook-worker/src/: benchmarking.rs  configuration.rs  lib.rs  mock.rs  tests.rs  weights.rs
gsy-node/modules/remuneration/: Cargo.toml  README.md
gsy-node/modules/remuneration/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
gsy-node/modules/stripe-bridge/: Cargo.toml  README.md
gsy-node/modules/stripe-bridge/src/: lib.rs  mock.rs  stripe_client.rs  (+2 more)
gsy-node/modules/trades-settlement/: Cargo.toml
gsy-node/node/: Cargo.toml
gsy-node/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs
gsy-node/primitives/: Cargo.toml
gsy-node/primitives/src/: lib.rs
gsy-node/runtime/: Cargo.toml
gsy-node/runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
gsy-orderbook-service/: Cargo.toml  Dockerfile  INTELLIGENT_Deliverable D3.2-draft.docx  README.md  configuration.yaml  metadata.scale  offchain-storage-docker-compose.yml  offchain-storage-postman-collection.json  populate_db_with_dummy_data.py
gsy-orderbook-service/src/: configuration.rs  db.rs  event_listener.rs  evm_handler.rs  ewds_handler.rs  lib.rs  main.rs  order_service.rs  scheduler.rs  schema.rs  schema_insert_order.rs  startup.rs
gsy-orderbook-service/src/db/: asset_measurements_service.rs  connection.rs  db.rs  forecasts_service.rs  grid_topology_service.rs  market_service.rs  measurements_service.rs  mod.rs  order_service.rs  schema.rs  trade_service.rs
gsy-orderbook-service/src/routes/: asset_measurements.rs  grid_topology.rs  market.rs  mod.rs  orders.rs  profiles.rs  trades.rs
gsy-orderbook-service/tests/api/: asset_measurements.rs  evm_integration.rs  grid_topology.rs  helpers.rs  main.rs  market.rs  measurements.rs  measurements_forecasts.rs  orders.rs  trades.rs
launchpad-matching-service/: Caddyfile  Cargo.toml  Dockerfile.caddy  Dockerfile.matching-service  README.md  configuration.yaml  openapi-match.yaml  openapi.yaml
launchpad-matching-service/src/: configuration.rs  lib.rs  main.rs
launchpad-matching-service/src/api/: controller.rs  mod.rs  model.rs  types.rs  views.rs
launchpad-matching-service/src/auth/: jwt.rs  mod.rs  model.rs  views.rs
launchpad-matching-service/tests/: api.rs  controller.rs  health_check.rs  model.rs  views.rs
offchain-primitives/: Cargo.toml  metadata.scale
offchain-primitives/src/: algorithms.rs  constants.rs  lib.rs  types.rs
offchain-primitives/src/db_api_schema/: grid_topology.rs  market.rs  mod.rs  orders.rs  profiles.rs  tariff.rs  trades.rs
offchain-primitives/src/node_to_api_schema/: insert_order.rs  insert_trades.rs  mod.rs
offchain-primitives/src/service_to_node_schema/: orders.rs
offchain-primitives/src/utils/: mod.rs
offchain-primitives/tests/: main.rs
primitives/: Cargo.toml
primitives/src/: lib.rs  orders.rs  trades.rs  vault.rs
primitives/test-helpers/: Cargo.toml
primitives/test-helpers/src/: lib.rs
(+153 files in other folders)
