[package]
name = "e2e-tests"
version = "0.1.0"
authors = ["Grid Singularity <info@gridsingularity.com>"]
edition = "2021"
publish = false

[[bin]]
name = "trade_executor"
path = "src/main.rs"

[dependencies]
cucumber = "0.20"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
subxt = { version = "0.37", features = ["substrate-compat"] }
subxt-signer = { version = "0.37" }
gsy-offchain-primitives = { path = "../offchain-primitives" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
blake2-rfc = { version = "0.2.18", default-features = false }
