[package]
name = "gsy-community-client"
version = "0.1.0"
edition = "2021"


[[bin]]
path = "src/main.rs"
name = "gsy-community-client"

[lib]
name = "gsy_community_client"
path = "src/lib.rs"

[dependencies]
gsy-offchain-primitives = { default-features = false, path = "../offchain-primitives", version = "0" }
reqwest = { version = "0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ethers = { version = "2.0.14", features = ["ws", "rustls"] }
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
blake2-rfc = { version = "0.2.18", default-features = false }

[dev-dependencies]
httpmock = "0.8.0-alpha.1"
tracing-subscriber = "0.3.19"
ethers-solc = "2.0.14"
tempfile = "3"
