[package]
name = "gsy-execution-engine"
version = "0.1.0"
authors = ["Grid Singularity <info@gridsingularity.com>"]
edition = "2021"
description = "Execution Engine for the Grid Singularity Energy Exchange"

[dependencies]
gsy-offchain-primitives = { default-features = false, path = "../offchain-primitives", version = "0" }
anyhow = "1"
chrono = { version = "0.4.37", features = ["serde"]}
clap = { version = "4", features = ["derive"] }
ethers = { version = "2.0.14", features = ["ws", "rustls"] }
reqwest = { version = "0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[dev-dependencies]
ethers-solc = "2.0.14"
tempfile = "3"

[[bin]]
name = "gsy-execution-engine"
path = "src/main.rs"
