[package]
name = "gsy-market-orchestrator"
version = "0.1.0"
authors = ["Grid Singularity <info@gridsingularity.com>"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "gsy-market-orchestrator"

[dependencies]
gsy-offchain-primitives = { default-features = false, path = "../offchain-primitives" }
anyhow = "1"
blake2-rfc = { version = "0.2.18", default-features = false }
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
ethers = { version = "2.0.14", features = ["ws", "rustls", "solc"] }
async-trait = "0.1.89"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
once_cell = { version = "1.21.3" }

[dev-dependencies]
tempfile = "3"
