[package]
name = "gsy-matching-engine"
version = "0.2.0"
authors = ["Grid Singularity <info@gridsingularity.com>"]
description = "Matching engine client for the Grid Singularity Energy Exchange"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gsy-matching-engine"

[dependencies]
gsy-offchain-primitives = { default-features = false, path = "../offchain-primitives", version = "0" }
anyhow = "1"
async-recursion = "1"
chrono = { version = "0.4.37", features = ["serde"]}
clap = { version = "4", features = ["derive"]}
reqwest = { version = "0", features = ["json"] }
ethers = { version = "2.0.14", features = ["ws", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[dev-dependencies]
ethers-solc = "2.0.14"
tempfile = "3"

[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"
