[package]
name = "gsy-orderbook-service"
version = "0.1.0"
authors = ["Grid Singularity <info@gridsingularity.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gsy-orderbook-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "4.5.1"
chrono = "0.4.38"
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive", "full", "bit-vec"] }
config = "0.14"
dotenv = "0"
envy = "0.4"
futures = "0.3.30"
mongodb = "2.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
subxt = { version = "0.35.1", features = ["substrate-compat"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio_schedule = "0.3.0"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[dev-dependencies]
once_cell = "1"
reqwest = {version = "0.12", features = ["json"]}
