[package]
name = "gsy-orderbook-service"
version = "0.1.0"
authors = ["Grid Singularity <info@gridsingularity.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gsy-orderbook-service"

[dependencies]
gsy-offchain-primitives = { default-features = false, path = "../offchain-primitives", version = "0" }
gsy-ethers-listener = { path = "../gsy-ethers-listener" }
anyhow = "1"
actix-web = "4.5.1"
chrono = { version = "0.4.37", features = ["serde"] }
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive", "full", "bit-vec"] }
config = "0.15.6"
dotenv = "0"
envy = "0.4"
futures = "0.3.30"
mongodb = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio_schedule = "0.3.0"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
ethers = { version = "2.0", default-features = false }
hex = "0.4"
async-trait = "0.1"
uuid = { version = "1.12.1", features = ["v4"] }

[dev-dependencies]
once_cell = "1"
reqwest = {version = "0.12", features = ["json"]}
ethers = { version = "2.0", features = ["ws", "abigen", "rustls", "solc"] }
tempfile = "3.10"
