[package]
name = "gsy-offchain-primitives"
version = "0.1.0"
edition = "2021"

[lib]
name = "gsy_offchain_primitives"
path = "src/lib.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive", "full", "bit-vec"] }
serde = { version = "1.0", features = ["derive"] }
sp-runtime = { version = "31.0.1", default-features = false, features = ["std"] }
sp-core = { version = "28.0.0", default-features = false, features = ["std"] }
hex = "0.4.3"
chrono = { version = "0.4.37", features = ["serde"] }
once_cell = { version = "1.21.3" }
